# UniHub-Back

./: .dockerignore  .env.example  .gitignore  .importlinter  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml  pytest.ini  ruff.toml  sonar-project.properties  test.db
.github/workflows/: deploy.yml  devel.yml  server-run-check.yml
app/: main.py
app/api/: dependencies.py
app/api/utils/: __init__.py  db_utils.py  decorators.py  permissions.py
app/core/: __init__.py  config.py  database.py  dependencies.py  email_service.py  logger.py  middleware.py  rate_limiter.py  security.py  seed.py  seed_offers.py  types.py  valkey.py  websocket.py
app/core/templates/: base.html  password_reset.html  verification_email.html
app/crud/: channel.py  conversation.py  file_association.py  files.py  housing_amenity.py  housing_category.py  housing_offer.py  housing_photo.py  interest.py  messages.py  university.py  user.py  user_like.py  utils.py
app/domains/: __init__.py
app/domains/admin_settings/: __init__.py  settings_repository.py  settings_service.py
app/domains/auth/: auth_service.py  (+1 more)
app/literals/: auth.py  channels.py  dashboard.py  housing.py  item.py  items.py  job.py  like_status.py  report.py  users.py
app/models/: __init__.py  auth.py  channel.py  channel_ban.py  channel_member.py  connection.py  conversation.py  file_association.py  files.py  housing_amenity.py  housing_category.py  housing_offer.py  housing_photo.py  interest.py  item.py  item_category.py  job.py  message.py  password_history.py  report.py  student_like.py  system_settings.py  terms.py  university.py  user.py  user_like.py  user_preference.py  user_terms_acceptance.py
app/repositories/: base.py
app/schemas/: __init__.py  admin_settings.py  auth.py  channel.py  connection.py  conversation.py  dashboard.py  file_association.py  files.py  housing_amenity.py  housing_category.py  housing_offer.py  housing_photo.py  interest.py  item.py  job.py  message.py  report.py  student_like.py  terms.py  university.py  user.py  user_like.py  user_preference.py  user_terms_acceptance.py
app/seeds/: __init__.py  amenities.py  category.py  channels.py  conversations.py  housing_offers.py  interests.py  item_category.py  items.py  job_offers.py  messages.py  reports.py  seed.py  terms.py  university.py  user_terms.py  users.py
app/services/: auth.py  mock_data.py
migrations/: env.py
migrations/versions/: 091e9af0855b_initial_schema.py  3ef72cbe3fbf_add_user_ban_fields.py  a1b2c3d4e5f6_add_system_settings_tables.py  ec291f746949_add_onboarding_step_to_users.py
scripts/: check_migration_included.py
tests/: conftest.py  test_admin_settings.py  test_auth.py  test_categories.py  test_channel.py  test_channels.py  test_connection.py  test_conversation.py  test_dashboards.py  test_email_verification.py  test_file_association.py  test_files.py  test_housing_offers.py  test_image_processor.py  test_interest.py  test_item.py  test_jobs.py  test_messages.py  test_onboarding.py  test_report.py  test_students.py  test_terms.py  test_user.py  test_user_ban.py  test_user_likes.py  test_user_terms.py  test_websocket.py
tests/factories/: item_factory.py  job_factory.py  offer_factory.py
(+81 files in other folders)
