[project]
name = "uniroom-back"
version = "0.1.0"
description = "UniRoom FastAPI backend"
authors = [
    { name = "Matias Medina", email = "therealsmuks@gmail.com" },
    { name = "Aniol Serrano", email = "aniol0012@gmail.com" },
    { name = "Cesar Crespo", email = "crespocesar9898@gmail.com" },
    { name = "Carles Sànchez", email = "theselra15@gmail.com" },
    { name = "Jurek Legaszewski", email = "jurek.legaszewski@gmail.com" }
]
license = { text = "TBD" }
readme = "README.md"
requires-python = ">=3.13.7"

dependencies = [
    "alembic>=1.16.5",
    "fastapi>=0.118.0",
    "jose>=1.0.0",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.11.0",
    "pydantic[email]>=2.11.9",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.43",
    "uvicorn[standard]",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.27.0",
    "pre-commit>=4.3.0",
    "ruff>=0.13.2",
]

[tool.ruff]
