[project]
name = "unihub-back"
version = "0.1.0"
description = "UniHub FastAPI backend"
authors = [
    { name = "Matias Medina", email = "therealsmuks@gmail.com" },
    { name = "Aniol Serrano", email = "aniol0012@gmail.com" },
    { name = "Cesar Crespo", email = "crespocesar9898@gmail.com" },
    { name = "Carles Sànchez", email = "theselra15@gmail.com" },
    { name = "Jurek Legaszewski", email = "jurek.legaszewski@gmail.com" }
]
license = { text = "TBD" }
readme = "README.md"
requires-python = ">=3.13.7"

dependencies = [
    "alembic>=1.16.5",
    "authlib>=1.6.5",
    "fastapi>=0.118.0",
    "itsdangerous>=2.2.0",
    "jose>=1.0.0",
    "passlib[bcrypt]>=1.7.4",
    "polyfactory>=2.22.2",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.11.0",
    "pydantic[email]>=2.11.9",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.43",
    "uvicorn[standard]",
    "httpx>=0.27.0",
    "fakeredis>=2.32.0",
    "redis>=6.4.0",
    "minio>=7.2.18",
    "pytest-asyncio>=1.3.0",
    "pre-commit>=4.3.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "pre-commit>=4.3.0",
    "ruff>=0.13.2",
    "bcrypt>=5.0.0",
    "pydeps>=3.0.1",
    "graphviz>=0.21",
    "import-linter>=2.5.2",
    "paracelsus>=0.12.0",
    "pytest-asyncio>=1.3.0",
]
extra = [
    "paracelsus>=0.12.0",
]

[tool.ruff]
